--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
   <title>Chatty</title>
   <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
-
+<body class="container">
+  <div class="container_main row">
+    <form>
+      <div class="form-group">
+        <label for="">Messages</label>
+        <textarea class="form-control chatBox" rows="3"></textarea>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
