finished styling of main page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
   <div>
     <nav class="navBar">
       <img id="logo" src="chattyimage.png">
-      <div id="messageArea">
         <input type="textarea" id="messageArea" name="messageArea" placeholder="Tell Me Something">
-      </div>
-      <div id="clearMessage">
-        <input type="button" id="clearButton" name="clearbutton" value="Clear Message Board">
-      </div>
+        <button type="button" class="btn btn-primary">Clear Message Board</button>
       <div id="pref">
         <input type="checkbox" value="theme" id="theme" name="theme">
         <label for="theme">Dark Theme</label>
