added js file for event listeners

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="text">Large Text</label>
       </div>   
     </nav>
-
+  <script src="events.js"></script>
   <script src="loadmessages.js"></script>
 </body>
 </html>
