changed text area to div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <form>
       <div class="form-group">
         <label for="">Messages</label>
-        <textarea class="form-control chatBox" rows="3"></textarea>
+        <div class="form-control chatBox" rows="3"></div>
       </div>
     </form>
   </div>
