added event listener to enter key

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <form>
       <div class="form-group">
         <label for="">Messages</label>
-        <div class="form-control chatBox" rows="3"></div>
+        <div class="pre-scrollable form-control chatBox" rows="3">
+
+        </div>
       </div>
     </form>
   </div>
