replaced logo image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="container light textToggle">
   <div>
     <nav class="navBar">
-      <img id="logo" src="chattyimage.png">
+      <img id="logo" src="chattylogo1.png">
         <input class="light textToggle" type="textarea" id="messageArea" name="messageArea" placeholder="Tell Me Something">
         <button type="button" class="btn btn-primary">Clear Message Board</button>
       <div id="pref">
