added moment.js library

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
     </form>
   </div>
+  <script src="bower_components/moment/moment.js"></script>
   <script src="loadmessages.js"></script>
   <script src="messageControls.js"></script>
   <script src="events.js"></script>
