--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navBar">
       <img id="logo" src="chattylogo1.png">
         <input class="light textToggle" type="textarea" id="messageArea" name="messageArea" placeholder="Tell Me Something">
-        <button type="button" onclick="clearBox('chatBox')" class="btn btn-primary">Clear Message Board</button> 
+        <button type="button" onclick="clearBox('chatBox')" class="btn btn-primary" id="clearButton">Clear Message Board</button> 
       <div id="pref">
         <input type="checkbox" value="theme" id="theme" name="theme">
         <label for="theme">Dark Theme</label>
