Added read messages button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
       </div>
     </form>
+    <button onclick="Chatty.readAllMessages()" style="display:block;margin:0 auto" type="button" class="btn btn-default">
+      <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+      Read Messages
+    </button>
   </div>
   <script src="bower_components/moment/moment.js"></script>
   <script src="loadmessages.js"></script>
