First commit: WIP

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         <input type="checkbox" value="text" id="size" name="text">
         <label for="text">Large Text</label>
       </div>
+      <div id="user-select">
+        <p>User Select:</p>
+        <label for="user-jamie">Jamie</label>
+        <input type="radio" id="user-jamie" value="jamie" name="user">
+
+        <label for="user-edgar">Edgar</label>
+        <input type="radio" id="user-edgar" value="edgar" name="user">
+
+        <label for="user-matt">Matt</label>
+        <input type="radio" id="user-matt" value="matt" name="user">
+
+      </div>
     </nav>
     <form>
       <div class="form-group">
