Finished Multiple Users

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <div id="user-select">
         <p>User Select:</p>
         <label for="user-jamie">Jamie</label>
-        <input type="radio" id="user-jamie" value="jamie" name="user">
+        <input type="radio" id="user-jamie" checked value="Jamie" name="user">
 
         <label for="user-edgar">Edgar</label>
-        <input type="radio" id="user-edgar" value="edgar" name="user">
+        <input type="radio" id="user-edgar" value="Edgar" name="user">
 
         <label for="user-matt">Matt</label>
-        <input type="radio" id="user-matt" value="matt" name="user">
+        <input type="radio" id="user-matt" value="Matt" name="user">
 
       </div>
     </nav>
