Finished Easter Egg

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
   <script src="loadmessages.js"></script>
   <script src="messageControls.js"></script>
   <script src="events.js"></script>
+  <script src="easterEgg.js"></script>
 </body>
 </html>
